// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when common extension has duplicate common property should have validation failure -> message 1`] = `"Common Extension CommonName redeclares property DuplicatePropertyName of base Common."`;

exports[`when common extension has duplicate common property should have validation failure -> sourceMap 1`] = `
Object {
  "column": 4,
  "line": 12,
  "tokenText": "common",
}
`;

exports[`when common extension has duplicate property name should have validation failure -> message 1`] = `"Common Extension CommonName redeclares property DuplicatePropertyName of base Common."`;

exports[`when common extension has duplicate property name should have validation failure -> sourceMap 1`] = `
Object {
  "column": 4,
  "line": 12,
  "tokenText": "bool",
}
`;

exports[`when common extension has multiple duplicates should have validation failure -> message 1`] = `"Common Extension CommonName redeclares property DuplicatePropertyName1 of base Common."`;

exports[`when common extension has multiple duplicates should have validation failure -> message 2`] = `"Common Extension CommonName redeclares property DuplicatePropertyName2 of base Common."`;

exports[`when common extension has multiple duplicates should have validation failure -> sourceMap 1`] = `
Object {
  "column": 4,
  "line": 16,
  "tokenText": "bool",
}
`;

exports[`when common extension has multiple duplicates should have validation failure -> sourceMap 2`] = `
Object {
  "column": 4,
  "line": 20,
  "tokenText": "bool",
}
`;
